// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data table columns Summary column returns eui grid columns with summary column 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [],
    "display": <Memo(UnifiedDataTableSummaryColumnHeader)
      columnDisplayName="Summary"
      headerRowHeight={5}
    />,
    "displayAsText": "Summary",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "_source",
    "isSortable": false,
    "schema": "kibana-json",
    "visibleCellActions": undefined,
  },
]
`;

exports[
  `Data table columns Textbased languages grid columns returns columns in correct format when column customisation is provided 1`
] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <span>
      test
    </span>,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataSource={
        EsqlSource {
          "columns": Array [
            Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
          ],
          "columnsByName": Map {
            "extension" => Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            "message" => Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
          },
          "fields": Array [
            Object {
              "esTypes": undefined,
              "name": "extension",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "keyword",
              ],
              "name": "message",
              "type": "string",
            },
          ],
          "id": "esql-913de595d2507b057f2ea923405bf909095d59736da610118eb96bb255ed0838",
          "kind": "esql",
          "references": Array [
            Object {
              "id": "esql-913de595d2507b057f2ea923405bf909095d59736da610118eb96bb255ed0838",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
          "resultColumns": Array [
            Object {
              "id": "extension",
              "meta": Object {
                "esType": undefined,
                "type": "string",
              },
              "name": "extension",
            },
            Object {
              "id": "message",
              "meta": Object {
                "esType": "keyword",
                "type": "string",
              },
              "name": "message",
            },
          ],
          "timeFieldName": undefined,
          "title": "test-data-view",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns column tokens returns eui grid columns with tokens 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": false,
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableTimeColumnHeader)
      dataView={
        Object {
          "docvalueFields": Array [],
          "fields": Array [
            Object {
              "aggregatable": false,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "_index",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "string",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "timestamp",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "date",
            },
            Object {
              "aggregatable": false,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "message",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": false,
              "subType": undefined,
              "type": "string",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "extension",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "string",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "bytes",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "number",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "scripted",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": true,
              "searchable": true,
              "subType": undefined,
              "type": "number",
            },
          ],
          "getAllowHidden": [Function],
          "getComputedFields": [Function],
          "getFieldByName": [MockFunction],
          "getFormatterForField": [MockFunction],
          "getIndexPattern": [Function],
          "getName": [Function],
          "getRuntimeField": [Function],
          "getScriptedField": [Function],
          "getSourceFiltering": [Function],
          "getTimeField": [Function],
          "id": "index-pattern-with-timefield-id",
          "isPersisted": [Function],
          "isTSDBMode": [Function],
          "isTimeBased": [Function],
          "isTimeNanosBased": [Function],
          "metaFields": Array [
            "_index",
            "_score",
          ],
          "name": "index-pattern-with-timefield",
          "setFieldCount": [MockFunction],
          "timeFieldName": "timestamp",
          "title": "index-pattern-with-timefield-title",
          "toMinimalSpec": [Function],
          "toSpec": [Function],
          "type": "default",
        }
      }
      dataViewField={
        Object {
          "aggregatable": true,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "timestamp",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": true,
          "subType": undefined,
          "type": "date",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "timestamp",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "timestamp",
    "initialWidth": 212,
    "isSortable": true,
    "schema": "datetime",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataSource={
        IndexPatternSource {
          "dataView": Object {
            "docvalueFields": Array [],
            "fields": Array [
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "_index",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "timestamp",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "date",
              },
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "message",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": false,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "extension",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "bytes",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "scripted",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": true,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
            ],
            "getAllowHidden": [Function],
            "getComputedFields": [Function],
            "getFieldByName": [MockFunction],
            "getFormatterForField": [MockFunction],
            "getIndexPattern": [Function],
            "getName": [Function],
            "getRuntimeField": [Function],
            "getScriptedField": [Function],
            "getSourceFiltering": [Function],
            "getTimeField": [Function],
            "id": "index-pattern-with-timefield-id",
            "isPersisted": [Function],
            "isTSDBMode": [Function],
            "isTimeBased": [Function],
            "isTimeNanosBased": [Function],
            "metaFields": Array [
              "_index",
              "_score",
            ],
            "name": "index-pattern-with-timefield",
            "setFieldCount": [MockFunction],
            "timeFieldName": "timestamp",
            "title": "index-pattern-with-timefield-title",
            "toMinimalSpec": [Function],
            "toSpec": [Function],
            "type": "default",
          },
          "kind": "index-pattern",
          "references": Array [
            Object {
              "id": "index-pattern-with-timefield-id",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
        }
      }
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataSource={
        IndexPatternSource {
          "dataView": Object {
            "docvalueFields": Array [],
            "fields": Array [
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "_index",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "timestamp",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "date",
              },
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "message",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": false,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "extension",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "bytes",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "scripted",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": true,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
            ],
            "getAllowHidden": [Function],
            "getComputedFields": [Function],
            "getFieldByName": [MockFunction],
            "getFormatterForField": [MockFunction],
            "getIndexPattern": [Function],
            "getName": [Function],
            "getRuntimeField": [Function],
            "getScriptedField": [Function],
            "getSourceFiltering": [Function],
            "getTimeField": [Function],
            "id": "index-pattern-with-timefield-id",
            "isPersisted": [Function],
            "isTSDBMode": [Function],
            "isTimeBased": [Function],
            "isTimeNanosBased": [Function],
            "metaFields": Array [
              "_index",
              "_score",
            ],
            "name": "index-pattern-with-timefield",
            "setFieldCount": [MockFunction],
            "timeFieldName": "timestamp",
            "title": "index-pattern-with-timefield-title",
            "toMinimalSpec": [Function],
            "toSpec": [Function],
            "type": "default",
          },
          "kind": "index-pattern",
          "references": Array [
            Object {
              "id": "index-pattern-with-timefield-id",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
        }
      }
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[
  `Data table columns column tokens returns eui grid columns with tokens for custom column types 1`
] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataSource={
        EsqlSource {
          "columns": Array [
            Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
          ],
          "columnsByName": Map {
            "extension" => Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            "message" => Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
          },
          "fields": Array [
            Object {
              "esTypes": undefined,
              "name": "extension",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "keyword",
              ],
              "name": "message",
              "type": "string",
            },
          ],
          "id": "esql-913de595d2507b057f2ea923405bf909095d59736da610118eb96bb255ed0838",
          "kind": "esql",
          "references": Array [
            Object {
              "id": "esql-913de595d2507b057f2ea923405bf909095d59736da610118eb96bb255ed0838",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
          "resultColumns": Array [
            Object {
              "id": "extension",
              "meta": Object {
                "esType": undefined,
                "type": "string",
              },
              "name": "extension",
            },
            Object {
              "id": "message",
              "meta": Object {
                "esType": "keyword",
                "type": "string",
              },
              "name": "message",
            },
          ],
          "timeFieldName": undefined,
          "title": "test-data-view",
        }
      }
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataSource={
        EsqlSource {
          "columns": Array [
            Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
          ],
          "columnsByName": Map {
            "extension" => Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            "message" => Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
          },
          "fields": Array [
            Object {
              "esTypes": undefined,
              "name": "extension",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "keyword",
              ],
              "name": "message",
              "type": "string",
            },
          ],
          "id": "esql-913de595d2507b057f2ea923405bf909095d59736da610118eb96bb255ed0838",
          "kind": "esql",
          "references": Array [
            Object {
              "id": "esql-913de595d2507b057f2ea923405bf909095d59736da610118eb96bb255ed0838",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
          "resultColumns": Array [
            Object {
              "id": "extension",
              "meta": Object {
                "esType": undefined,
                "type": "string",
              },
              "name": "extension",
            },
            Object {
              "id": "message",
              "meta": Object {
                "esType": "keyword",
                "type": "string",
              },
              "name": "message",
            },
          ],
          "timeFieldName": undefined,
          "title": "test-data-view",
        }
      }
      headerRowHeight={5}
      showColumnTokens={true}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[
  `Data table columns getEuiGridColumns returns eui grid columns showing default columns 1`
] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": false,
      "showMoveLeft": false,
      "showMoveRight": false,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataSource={
        IndexPatternSource {
          "dataView": Object {
            "docvalueFields": Array [],
            "fields": Array [
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "_index",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "timestamp",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "date",
              },
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "message",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": false,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "extension",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "bytes",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "scripted",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": true,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
            ],
            "getAllowHidden": [Function],
            "getComputedFields": [Function],
            "getFieldByName": [MockFunction],
            "getFormatterForField": [MockFunction],
            "getIndexPattern": [Function],
            "getName": [Function],
            "getRuntimeField": [Function],
            "getScriptedField": [Function],
            "getSourceFiltering": [Function],
            "getTimeField": [Function],
            "id": "index-pattern-with-timefield-id",
            "isPersisted": [Function],
            "isTSDBMode": [Function],
            "isTimeBased": [Function],
            "isTimeNanosBased": [Function],
            "metaFields": Array [
              "_index",
              "_score",
            ],
            "name": "index-pattern-with-timefield",
            "setFieldCount": [MockFunction],
            "timeFieldName": "timestamp",
            "title": "index-pattern-with-timefield-title",
            "toMinimalSpec": [Function],
            "toSpec": [Function],
            "type": "default",
          },
          "kind": "index-pattern",
          "references": Array [
            Object {
              "id": "index-pattern-with-timefield-id",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": false,
      "showMoveLeft": false,
      "showMoveRight": false,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataSource={
        IndexPatternSource {
          "dataView": Object {
            "docvalueFields": Array [],
            "fields": Array [
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "_index",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "timestamp",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "date",
              },
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "message",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": false,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "extension",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "bytes",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "scripted",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": true,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
            ],
            "getAllowHidden": [Function],
            "getComputedFields": [Function],
            "getFieldByName": [MockFunction],
            "getFormatterForField": [MockFunction],
            "getIndexPattern": [Function],
            "getName": [Function],
            "getRuntimeField": [Function],
            "getScriptedField": [Function],
            "getSourceFiltering": [Function],
            "getTimeField": [Function],
            "id": "index-pattern-with-timefield-id",
            "isPersisted": [Function],
            "isTSDBMode": [Function],
            "isTimeBased": [Function],
            "isTimeNanosBased": [Function],
            "metaFields": Array [
              "_index",
              "_score",
            ],
            "name": "index-pattern-with-timefield",
            "setFieldCount": [MockFunction],
            "timeFieldName": "timestamp",
            "title": "index-pattern-with-timefield-title",
            "toMinimalSpec": [Function],
            "toSpec": [Function],
            "type": "default",
          },
          "kind": "index-pattern",
          "references": Array [
            Object {
              "id": "index-pattern-with-timefield-id",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns getEuiGridColumns returns eui grid columns with time column 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": false,
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableTimeColumnHeader)
      dataView={
        Object {
          "docvalueFields": Array [],
          "fields": Array [
            Object {
              "aggregatable": false,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "_index",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "string",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "timestamp",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "date",
            },
            Object {
              "aggregatable": false,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "message",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": false,
              "subType": undefined,
              "type": "string",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "extension",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "string",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "bytes",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": false,
              "searchable": true,
              "subType": undefined,
              "type": "number",
            },
            Object {
              "aggregatable": true,
              "conflictDescriptions": undefined,
              "count": 0,
              "customDescription": undefined,
              "customLabel": undefined,
              "defaultFormatter": undefined,
              "esTypes": undefined,
              "lang": undefined,
              "name": "scripted",
              "readFromDocValues": false,
              "script": undefined,
              "scripted": true,
              "searchable": true,
              "subType": undefined,
              "type": "number",
            },
          ],
          "getAllowHidden": [Function],
          "getComputedFields": [Function],
          "getFieldByName": [MockFunction],
          "getFormatterForField": [MockFunction],
          "getIndexPattern": [Function],
          "getName": [Function],
          "getRuntimeField": [Function],
          "getScriptedField": [Function],
          "getSourceFiltering": [Function],
          "getTimeField": [Function],
          "id": "index-pattern-with-timefield-id",
          "isPersisted": [Function],
          "isTSDBMode": [Function],
          "isTimeBased": [Function],
          "isTimeNanosBased": [Function],
          "metaFields": Array [
            "_index",
            "_score",
          ],
          "name": "index-pattern-with-timefield",
          "setFieldCount": [MockFunction],
          "timeFieldName": "timestamp",
          "title": "index-pattern-with-timefield-title",
          "toMinimalSpec": [Function],
          "toSpec": [Function],
          "type": "default",
        }
      }
      dataViewField={
        Object {
          "aggregatable": true,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "timestamp",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": true,
          "subType": undefined,
          "type": "date",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "timestamp",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "timestamp",
    "initialWidth": 212,
    "isSortable": true,
    "schema": "datetime",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataSource={
        IndexPatternSource {
          "dataView": Object {
            "docvalueFields": Array [],
            "fields": Array [
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "_index",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "timestamp",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "date",
              },
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "message",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": false,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "extension",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "bytes",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "scripted",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": true,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
            ],
            "getAllowHidden": [Function],
            "getComputedFields": [Function],
            "getFieldByName": [MockFunction],
            "getFormatterForField": [MockFunction],
            "getIndexPattern": [Function],
            "getName": [Function],
            "getRuntimeField": [Function],
            "getScriptedField": [Function],
            "getSourceFiltering": [Function],
            "getTimeField": [Function],
            "id": "index-pattern-with-timefield-id",
            "isPersisted": [Function],
            "isTSDBMode": [Function],
            "isTimeBased": [Function],
            "isTimeNanosBased": [Function],
            "metaFields": Array [
              "_index",
              "_score",
            ],
            "name": "index-pattern-with-timefield",
            "setFieldCount": [MockFunction],
            "timeFieldName": "timestamp",
            "title": "index-pattern-with-timefield-title",
            "toMinimalSpec": [Function],
            "toSpec": [Function],
            "type": "default",
          },
          "kind": "index-pattern",
          "references": Array [
            Object {
              "id": "index-pattern-with-timefield-id",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataSource={
        IndexPatternSource {
          "dataView": Object {
            "docvalueFields": Array [],
            "fields": Array [
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "_index",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "timestamp",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "date",
              },
              Object {
                "aggregatable": false,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "message",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": false,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "extension",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "string",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "bytes",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": false,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
              Object {
                "aggregatable": true,
                "conflictDescriptions": undefined,
                "count": 0,
                "customDescription": undefined,
                "customLabel": undefined,
                "defaultFormatter": undefined,
                "esTypes": undefined,
                "lang": undefined,
                "name": "scripted",
                "readFromDocValues": false,
                "script": undefined,
                "scripted": true,
                "searchable": true,
                "subType": undefined,
                "type": "number",
              },
            ],
            "getAllowHidden": [Function],
            "getComputedFields": [Function],
            "getFieldByName": [MockFunction],
            "getFormatterForField": [MockFunction],
            "getIndexPattern": [Function],
            "getName": [Function],
            "getRuntimeField": [Function],
            "getScriptedField": [Function],
            "getSourceFiltering": [Function],
            "getTimeField": [Function],
            "id": "index-pattern-with-timefield-id",
            "isPersisted": [Function],
            "isTSDBMode": [Function],
            "isTimeBased": [Function],
            "isTimeNanosBased": [Function],
            "metaFields": Array [
              "_index",
              "_score",
            ],
            "name": "index-pattern-with-timefield",
            "setFieldCount": [MockFunction],
            "timeFieldName": "timestamp",
            "title": "index-pattern-with-timefield-title",
            "toMinimalSpec": [Function],
            "toSpec": [Function],
            "type": "default",
          },
          "kind": "index-pattern",
          "references": Array [
            Object {
              "id": "index-pattern-with-timefield-id",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": false,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;

exports[`Data table columns getEuiGridColumns returns eui grid with in memory sorting 1`] = `
Array [
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": false,
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="timestamp"
      columnName="timestamp"
      dataSource={
        EsqlSource {
          "columns": Array [
            Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "dateTime",
              "name": "timestamp",
              "source": "index",
              "type": "date",
            },
          ],
          "columnsByName": Map {
            "extension" => Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            "message" => Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
            "timestamp" => Object {
              "esType": "dateTime",
              "name": "timestamp",
              "source": "index",
              "type": "date",
            },
          },
          "fields": Array [
            Object {
              "esTypes": undefined,
              "name": "extension",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "keyword",
              ],
              "name": "message",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "dateTime",
              ],
              "name": "timestamp",
              "type": "date",
            },
          ],
          "id": "esql-43fecdc7fcf8482be31654c477d0e1e6486c63cf3bc58762d18fc648260dea1d",
          "kind": "esql",
          "references": Array [
            Object {
              "id": "esql-43fecdc7fcf8482be31654c477d0e1e6486c63cf3bc58762d18fc648260dea1d",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
          "resultColumns": Array [
            Object {
              "id": "extension",
              "meta": Object {
                "esType": undefined,
                "type": "string",
              },
              "name": "extension",
            },
            Object {
              "id": "message",
              "meta": Object {
                "esType": "keyword",
                "type": "string",
              },
              "name": "message",
            },
            Object {
              "id": "timestamp",
              "meta": Object {
                "esType": "dateTime",
                "type": "date",
              },
              "name": "timestamp",
            },
          ],
          "timeFieldName": "timestamp",
          "title": "test-data-view",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "timestamp",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "timestamp",
    "isSortable": true,
    "schema": "datetime",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="extension"
      columnName="extension"
      dataSource={
        EsqlSource {
          "columns": Array [
            Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "dateTime",
              "name": "timestamp",
              "source": "index",
              "type": "date",
            },
          ],
          "columnsByName": Map {
            "extension" => Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            "message" => Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
            "timestamp" => Object {
              "esType": "dateTime",
              "name": "timestamp",
              "source": "index",
              "type": "date",
            },
          },
          "fields": Array [
            Object {
              "esTypes": undefined,
              "name": "extension",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "keyword",
              ],
              "name": "message",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "dateTime",
              ],
              "name": "timestamp",
              "type": "date",
            },
          ],
          "id": "esql-43fecdc7fcf8482be31654c477d0e1e6486c63cf3bc58762d18fc648260dea1d",
          "kind": "esql",
          "references": Array [
            Object {
              "id": "esql-43fecdc7fcf8482be31654c477d0e1e6486c63cf3bc58762d18fc648260dea1d",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
          "resultColumns": Array [
            Object {
              "id": "extension",
              "meta": Object {
                "esType": undefined,
                "type": "string",
              },
              "name": "extension",
            },
            Object {
              "id": "message",
              "meta": Object {
                "esType": "keyword",
                "type": "string",
              },
              "name": "message",
            },
            Object {
              "id": "timestamp",
              "meta": Object {
                "esType": "dateTime",
                "type": "date",
              },
              "name": "timestamp",
            },
          ],
          "timeFieldName": "timestamp",
          "title": "test-data-view",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "extension",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "extension",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
  Object {
    "actions": Object {
      "additional": Array [
        Object {
          "data-test-subj": "gridCopyColumnNameToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy name"
            id="unifiedDataTable.grid.copyColumnNameToClipBoardButton"
          />,
          "onClick": [Function],
        },
        Object {
          "data-test-subj": "gridCopyColumnValuesToClipBoardButton",
          "iconProps": Object {
            "size": "m",
          },
          "iconType": "copy",
          "label": <Memo(MemoizedFormattedMessage)
            defaultMessage="Copy column"
            id="unifiedDataTable.grid.copyColumnValuesToClipBoardButton"
          />,
          "onClick": [Function],
        },
      ],
      "showHide": Object {
        "data-test-subj": "unifiedDataTableRemoveColumn",
        "iconType": "cross",
        "label": "Remove column",
      },
      "showMoveLeft": true,
      "showMoveRight": true,
    },
    "cellActions": Array [
      [Function],
      [Function],
      [Function],
    ],
    "display": <Memo(DataTableColumnHeader)
      columnDisplayName="message"
      columnName="message"
      dataSource={
        EsqlSource {
          "columns": Array [
            Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
            Object {
              "esType": "dateTime",
              "name": "timestamp",
              "source": "index",
              "type": "date",
            },
          ],
          "columnsByName": Map {
            "extension" => Object {
              "esType": undefined,
              "name": "extension",
              "source": "index",
              "type": "string",
            },
            "message" => Object {
              "esType": "keyword",
              "name": "message",
              "source": "index",
              "type": "string",
            },
            "timestamp" => Object {
              "esType": "dateTime",
              "name": "timestamp",
              "source": "index",
              "type": "date",
            },
          },
          "fields": Array [
            Object {
              "esTypes": undefined,
              "name": "extension",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "keyword",
              ],
              "name": "message",
              "type": "string",
            },
            Object {
              "esTypes": Array [
                "dateTime",
              ],
              "name": "timestamp",
              "type": "date",
            },
          ],
          "id": "esql-43fecdc7fcf8482be31654c477d0e1e6486c63cf3bc58762d18fc648260dea1d",
          "kind": "esql",
          "references": Array [
            Object {
              "id": "esql-43fecdc7fcf8482be31654c477d0e1e6486c63cf3bc58762d18fc648260dea1d",
              "name": "data-source",
              "type": "index-pattern",
            },
          ],
          "resultColumns": Array [
            Object {
              "id": "extension",
              "meta": Object {
                "esType": undefined,
                "type": "string",
              },
              "name": "extension",
            },
            Object {
              "id": "message",
              "meta": Object {
                "esType": "keyword",
                "type": "string",
              },
              "name": "message",
            },
            Object {
              "id": "timestamp",
              "meta": Object {
                "esType": "dateTime",
                "type": "date",
              },
              "name": "timestamp",
            },
          ],
          "timeFieldName": "timestamp",
          "title": "test-data-view",
        }
      }
      headerRowHeight={5}
    />,
    "displayAsText": "message",
    "displayHeaderCellProps": Object {
      "className": "unifiedDataTable__headerCell",
    },
    "id": "message",
    "isSortable": true,
    "schema": "string",
    "visibleCellActions": undefined,
  },
]
`;
